x86_32 Minimal VM build failure after JDK-8262355

XMLWordPrintable

    • b17
    • x86

      * For target hotspot_variant-minimal_libjvm_objs_sharedRuntime_x86_32.o:
      /home/shade/trunks/jdk/src/hotspot/cpu/x86/sharedRuntime_x86_32.cpp: In static member function 'static OopMap* RegisterSaver::save_live_registers(MacroAssembler*, int, int*, bool, bool)':
      /home/shade/trunks/jdk/src/hotspot/cpu/x86/sharedRuntime_x86_32.cpp:234:22: error: 'opmask_state_bytes' was not declared in this scope
        234 | __ subptr(rsp, opmask_state_bytes);
            | ^~~~~~~~~~~~~~~~~~

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: