8264759: x86_32 Minimal VM build failure after JDK-8262355