src/hotspot/cpu/x86/sharedRuntime_x86_32.cpp
@@ -219,6 +219,7 @@ OopMap* RegisterSaver::save_live_registers(MacroAssembler* masm, int additional_
     }
   }
 
+#ifdef COMPILER2
   if (save_vectors) {
     __ subptr(rsp, ymm_bytes);
     // Save upper half of YMM registers
@@ -239,6 +240,9 @@ OopMap* RegisterSaver::save_live_registers(MacroAssembler* masm, int additional_
     }
   }
   __ vzeroupper();
+#else
+  assert(!save_vectors, "vectors are generated only by C2");
+#endif
 
   // Set an oopmap for the call site.  This oopmap will map all
   // oop-registers and debug-info registers as callee-saved.  This
